# ai_simple_soc

./: .cursorrules  .gitignore  DeepPlan.md  Dockerfile  README.md  api_server_v3.py  entrypoint_api_v3.sh  llm_agent.py  pyproject.toml  soc_agent_v3.py
.github/workflows/: ci.yml
TechRadar/: techradar.md
agents/: __init__.py  base_agent.py  investigator_agent.py  orchestrator.py  reporter_agent.py  responder_agent.py  triage_agent.py
config/: .env.default  requirements.txt  settings.py
memory/: local_memory.py
middleware/: prompt_injection.py
models/: request_models.py  response_models.py
services/: active_response.py  audit_service.py  circuit_breaker.py  drain3_server.py  exceptions.py  llm_cache.py  llm_orchestrator.py  logging_config.py  mcp_client.py  rate_limiter.py
tests/: test_agent.py  test_agents.py  test_drain3_server.py  test_integration.py  test_mcp_client.py
